versioned_docs/version-5.2/indexes/querying/suggestions.mdx
---
title: "Query for suggestions with index"
hide_table_of_contents: true
sidebar_label: Suggestions
sidebar_position: 10
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["java", "csharp", "nodejs"];


# Query for suggestions with index
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="java">


RavenDB has an indexing mechanism built upon the Lucene engine which has a great suggestions feature. This capability allows a significant improvement of search functionalities enhancing the overall user experience of the application.

Let's consider an example where the users have the option to look for products by their name. The index and query would appear as follows:

<TabItem value="suggestions_1" label="suggestions_1">
<CodeBlock language="java">
{`public class Products_ByName extends AbstractIndexCreationTask \{
    public Products_ByName() \{
        map = "from product in docs.Products " +
            "select new " +
            "\{ " +
            "  product.Name " +
            "\} ";

        index("Name", FieldIndexing.SEARCH); // (optional) splitting name into multiple tokens
        suggestion("Name");// configuring suggestions
    \}
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="suggestions_2" label="suggestions_2">
<CodeBlock language="java">
{`Product product = session
    .query(Product.class, Products_ByName.class)
    .search("Name", "chaig")
    .firstOrDefault();
`}
</CodeBlock>
</TabItem>

If our database has `Northwind` samples deployed then it will not return any results. However, we can ask RavenDB for help:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="java">
{`Map<String, SuggestionResult> suggestionResult = session
    .query(Product.class, Products_ByName.class)
    .suggestUsing(builder -> builder.byField("Name", "chaig"))
    .execute();

System.out.println("Did you mean?");

for (String suggestion : suggestionResult.get("Name").getSuggestions()) {
    System.out.println("\\t" + suggestion);
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Products/ByName' 
select suggest('Name', 'chaig')
`}
</CodeBlock>
</TabItem>
</Tabs>

It will produce these suggestions:

    Did you mean?
        chang
        chai

<Admonition type="note" title="Client API" id="client-api" href="#client-api">

You can read more about suggestions in our [Client API](../../client-api/session/querying/how-to-work-with-suggestions.mdx) article. 

</Admonition>

## Suggest Over Multiple Words

RavenDB allows you to perform a suggestion query over multiple words.

<TabItem value="query_suggestion_over_multiple_words" label="query_suggestion_over_multiple_words">
<CodeBlock language="java">
{`SuggestionOptions options = new SuggestionOptions();
options.setAccuracy(0.4f);
options.setPageSize(5);
options.setDistance(StringDistanceTypes.JARO_WINKLER);
options.setSortMode(SuggestionSortMode.POPULARITY);

Map<String, SuggestionResult> resultsByMultipleWords = session
    .query(Product.class, Products_ByName.class)
    .suggestUsing(builder ->
        builder.byField("Name", new String[]\{"chaig", "tof"\})
            .withOptions(options))
    .execute();

System.out.println("Did you mean?");

for (String suggestion : resultsByMultipleWords.get("Name").getSuggestions()) \{
    System.out.println("\\t" + suggestion);
\}
`}
</CodeBlock>
</TabItem>

This will produce the following results:

    Did you mean?
        chai
        chang
        chartreuse
        chef
        tofu

## Remarks

<Admonition type="warning" title="Increased indexing time" id="increased-indexing-time" href="#increased-indexing-time">

Indexes with turned on suggestions tend to use a lot more CPU power than other indexes. This can impact indexing speed (querying is not impacted).

</Admonition>


</LanguageContent>
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Prior to this article, please refer to [Query for Suggestions](../../client-api/session/querying/how-to-work-with-suggestions.mdx)  
  for general knowledge about Suggestions, and for dynamic-queries examples.  

* In addition to getting suggested terms when making a dynamic-query,  
  you can query for similar terms when querying an index.
  
* This article provides examples of querying an index for suggestions.  
  Find the Suggestions API methods listed [here](../../client-api/session/querying/how-to-work-with-suggestions.mdx#syntax).

* In this page:

    * [Configure the index for suggestions](../../indexes/querying/suggestions.mdx#configure-the-index-for-suggestions)
    * [The index terms](../../indexes/querying/suggestions.mdx#the-index-terms)
    * [Suggest terms - for single term](../../indexes/querying/suggestions.mdx#suggest-terms---for-single-term)
    * [Suggest terms - for multiple terms](../..//indexes/querying/suggestions.mdx#suggest-terms---for-multiple-terms)
    * [Suggest terms - for multiple fields](../..//indexes/querying/suggestions.mdx#suggest-terms---for-multiple-fields)
    * [Suggest terms - customize options and display name](../..//indexes/querying/suggestions.mdx#suggest-terms---customize-options-and-display-name)

</Admonition>
## Configure the index for suggestions

* In order to be able to ask for suggested terms when querying an index field,  
  that field must first be configured for suggestions in the __index definition__.

* See the following sample index:  
  (This index will be used in the examples ahead).

<TabItem value="suggestions_index_1" label="suggestions_index_1">
<CodeBlock language="csharp">
{`public class Products_ByName : AbstractIndexCreationTask<Product, Products_ByName.IndexEntry>
\{
    // The IndexEntry class defines the index-fields
    public class IndexEntry
    \{
        public string ProductName \{ get; set; \}
    \}
    
    public Products_ByName()
    \{
        // The 'Map' function defines the content of the index-fields
        Map = products => from product in products
            select new IndexEntry
            \{
                ProductName = product.Name
            \};

        // Configure index-field 'ProductName' for suggestions
        Suggestion(x => x.ProductName);
        
        // Optionally: set 'Search' on this field
        // This will split the field content into multiple terms allowing for a full-text search
        Indexes.Add(x => x.ProductName, FieldIndexing.Search);
    \}
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">

__Increased indexing time__:

* When configuring an index for suggestions, then during the indexing process,  
  in addition to the regular breakdown of the data into terms (tokenization),  
  RavenDB will scramble the terms to simulate common errors.

* This can impact indexing speed but the cost of querying suggestions is Not impacted.

</Admonition>



## The index terms
 
Based on the Northwind sample data,  
these are the terms generated for the above index `Products/ByName`:

![Figure 1. Index terms](./assets/index-terms.png)

1. __The index-field name__ - as defined in the index definition.   
   In this example the field name is `ProductName`.

2. __The terms__ that were generated for this index-field from the documents in the Products collection.  
   * The image shows a partial view out of the 163 terms in this list.  
   * The terms were generated by RavenDB's [default search analyzer](../../indexes/using-analyzers.mdx#ravendb) since full-text search was set on this field.  



## Suggest terms - for single term

Based on the Northwind sample data,  
the following query on the index `Products/ByName` from above has no resulting documents,  
since the term `chokolade` does Not exist in the index terms for index-field `ProductName`.

<TabItem value="suggestions_2" label="suggestions_2">
<CodeBlock language="csharp">
{`// This query on index 'Products/ByName' has NO resulting documents
List<Product> products = session
    .Query<Products_ByName.IndexEntry, Products_ByName>()
    .Search(x => x.ProductName, "chokolade")
    .OfType<Product>()
    .ToList();
`}
</CodeBlock>
</TabItem>

If you suspect that the term `chokolate` in the query criteria is written incorrectly,  
you can ask RavenDB to suggest similar terms from the index, as follows:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for single term:
// ====================================================

Dictionary<string, SuggestionResult> suggestions = session
     // Query the index   
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' 
        .ByField(x => x.ProductName, "chokolade"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_async" label="Query_async">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for single term:
// ====================================================

Dictionary<string, SuggestionResult> suggestions = await asyncSession
     // Query the index   
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' 
        .ByField(x => x.ProductName, "chokolade"))
    .ExecuteAsync();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_overload" label="Query_overload">
<CodeBlock language="csharp">
{`// Define the suggestion request for single term
var suggestionRequest = new SuggestionWithTerm("ProductName")
{
    // Looking for terms from index-field 'ProductName' that are similar to 'chokolade'  
    Term = "chokolade"
};

// Query the index for suggestions 
Dictionary<string, SuggestionResult> suggestions = session
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing' - pass the suggestion request
    .SuggestUsing(suggestionRequest)
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for single term:
// ====================================================

Dictionary<string, SuggestionResult> suggestions = session.Advanced
     // Query the index   
    .DocumentQuery<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' 
        .ByField(x => x.ProductName, "chokolade"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for terms from index-field 'ProductName' that are similar to 'chokolade'
from index "Products/ByName" 
select suggest(ProductName, "chokolade")
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_7" label="suggestions_7">
<CodeBlock language="csharp">
{`// The resulting suggested terms:
// ==============================

Console.WriteLine("Suggested terms in index-field 'ProductName' that are similar to 'chokolade':");
foreach (string suggestedTerm in suggestions["ProductName"].Suggestions)
\{
    Console.WriteLine("\\t\{0\}", suggestedTerm);
\}

// Suggested terms in index-field 'ProductName' that are similar to 'chokolade':
//     schokolade
//     chocolade
//     chocolate
`}
</CodeBlock>
</TabItem>



## Suggest terms - for multiple terms

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for multiple terms:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = session
     // Query the index
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop' 
        .ByField(x => x.ProductName, new[] { "chokolade", "syrop" }))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_async" label="Query_async">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for multiple terms:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = await asyncSession
     // Query the index   
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop' 
        .ByField(x => x.ProductName, new[] { "chokolade", "syrop" }))
    .ExecuteAsync();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_overload" label="Query_overload">
<CodeBlock language="csharp">
{`// Define the suggestion request for multiple terms
var suggestionRequest = new SuggestionWithTerms("ProductName")
{
    // Looking for terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop'  
    Terms = new[] { "chokolade", "syrop"}
};

// Query the index for suggestions 
Dictionary<string, SuggestionResult> suggestions = session
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing' - pass the suggestion request
    .SuggestUsing(suggestionRequest)
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Query the index for suggested terms for multiple terms:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = session.Advanced
     // Query the index   
    .DocumentQuery<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop'  
        .ByField(x => x.ProductName, new[] { "chokolade", "syrop" }))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop'
from index "Products/ByName" select suggest(ProductName, $p0)
{ "p0" : ["chokolade", "syrop"] }
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_12" label="suggestions_12">
<CodeBlock language="csharp">
{`// The resulting suggested terms:
// ==============================

// Suggested terms in index-field 'ProductName' that are similar to 'chokolade' OR to 'syrop':
//     schokolade
//     chocolade
//     chocolate
//     sirop
//     syrup
`}
</CodeBlock>
</TabItem>



## Suggest terms - for multiple fields

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Query the index for suggested terms in multiple fields:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = session
     // Query the index
    .Query<Companies_ByNameAndByContactName.IndexEntry, Companies_ByNameAndByContactName>()
     // Call 'SuggestUsing' to get suggestions for terms that are 
     // similar to 'chese' in first index-field (e.g. 'CompanyName') 
    .SuggestUsing(builder => builder
        .ByField(x => x.CompanyName, "chese" ))
     // Call 'AndSuggestUsing' to get suggestions for terms that are 
     // similar to 'frank' in an additional index-field (e.g. 'ContactName')
    .AndSuggestUsing(builder => builder
        .ByField(x => x.ContactName, "frank"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_async" label="Query_async">
<CodeBlock language="csharp">
{`// Query the index for suggested terms in multiple fields:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = await asyncSession
     // Query the index
    .Query<Companies_ByNameAndByContactName.IndexEntry, Companies_ByNameAndByContactName>()
     // Call 'SuggestUsing' to get suggestions for terms that are 
     // similar to 'chese' in first index-field (e.g. 'CompanyName') 
    .SuggestUsing(builder => builder
        .ByField(x => x.CompanyName, "chese" ))
     // Call 'AndSuggestUsing' to get suggestions for terms that are 
     // similar to 'frank' in an additional index-field (e.g. 'ContactName')
    .AndSuggestUsing(builder => builder
        .ByField(x => x.ContactName, "frank"))
    .ExecuteAsync();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_overload" label="Query_overload">
<CodeBlock language="csharp">
{`// Define suggestion requests for multiple fields:

var request1 = new SuggestionWithTerm("CompanyName")
{
    // Looking for terms from index-field 'CompanyName' that are similar to 'chese'  
    Term = "chese"
};

var request2 = new SuggestionWithTerm("ContactName")
{
    // Looking for terms from nested index-field 'ContactName' that are similar to 'frank'  
    Term = "frank"
};

// Query the index for suggestions 
Dictionary<string, SuggestionResult> suggestions = session
    .Query<Companies_ByNameAndByContactName.IndexEntry, Companies_ByNameAndByContactName>()
     // Call 'SuggestUsing' - pass the suggestion request for the first index-field
    .SuggestUsing(request1)
     // Call 'AndSuggestUsing' - pass the suggestion request for the second index-field
    .AndSuggestUsing(request2)
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Query the index for suggested terms in multiple fields:
// =======================================================

Dictionary<string, SuggestionResult> suggestions = session.Advanced
     // Query the index
    .DocumentQuery<Companies_ByNameAndByContactName.IndexEntry, Companies_ByNameAndByContactName>()
     // Call 'SuggestUsing' to get suggestions for terms that are 
     // similar to 'chese' in first index-field (e.g. 'CompanyName') 
    .SuggestUsing(builder => builder
        .ByField(x => x.CompanyName, "chese" ))
     // Call 'AndSuggestUsing' to get suggestions for terms that are 
     // similar to 'frank' in an additional index-field (e.g. 'ContactName')
    .AndSuggestUsing(builder => builder
        .ByField(x => x.ContactName, "frank"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="The_index" label="The_index">
<CodeBlock language="csharp">
{`public class Companies_ByNameAndByContactName :
    AbstractIndexCreationTask<Company, Companies_ByNameAndByContactName.IndexEntry>
{
    // The IndexEntry class defines the index-fields.
    public class IndexEntry
    {
        public string CompanyName { get; set; }
        public string ContactName { get; set; }
    }
    
    public Companies_ByNameAndByContactName()
    {
        // The 'Map' function defines the content of the index-fields
        Map = companies => from company in companies
            select new IndexEntry
            {
                CompanyName = company.Name,
                ContactName = company.Contact.Name
            };

        // Configure the index-fields for suggestions
        Suggestion(x => x.CompanyName);
        Suggestion(x => x.ContactName);
        
        // Optionally: set 'Search' on the index-fields
        // This will split the fields' content into multiple terms allowing for a full-text search
        Indexes.Add(x => x.CompanyName, FieldIndexing.Search);
        Indexes.Add(x => x.ContactName, FieldIndexing.Search);
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for suggested terms 
// from index-field 'CompanyName' AND from index-field 'ContactName'
from index "Companies/ByNameAndByContactName"
select suggest(CompanyName, "chese"), suggest(ContactName, "frank")
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_17" label="suggestions_17">
<CodeBlock language="csharp">
{`// The resulting suggested terms:
// ==============================

// Suggested terms in index-field 'CompanyName' that is similar to 'chese':
//     cheese
//     chinese

// Suggested terms in index-field 'ContactName' that are similar to 'frank':
//     fran
//     franken
`}
</CodeBlock>
</TabItem>



## Suggest terms - customize options and display name

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Query the index for suggested terms - customize options and display name:
// =========================================================================

Dictionary<string, SuggestionResult> suggestions = session
     // Query the index   
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
        .ByField(x => x.ProductName, "chokolade")
     // Customize suggestions options
    .WithOptions(new SuggestionOptions
    {
        Accuracy = 0.3f,
        PageSize = 5,
        Distance = StringDistanceTypes.NGram,
        SortMode = SuggestionSortMode.Popularity
    })
     // Customize display name for results
    .WithDisplayName("SomeCustomName"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_async" label="Query_async">
<CodeBlock language="csharp">
{`// Query the index for suggested terms - customize options and display name:
// =========================================================================

Dictionary<string, SuggestionResult> suggestions = await asyncSession
     // Query the index   
    .Query<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
        .ByField(x => x.ProductName, "chokolade")
     // Customize suggestions options
    .WithOptions(new SuggestionOptions
    {
        Accuracy = 0.3f,
        PageSize = 5,
        Distance = StringDistanceTypes.NGram,
        SortMode = SuggestionSortMode.Popularity
    })
     // Customize display name for results
    .WithDisplayName("SomeCustomName"))
    .ExecuteAsync();
`}
</CodeBlock>
</TabItem>
<TabItem value="Query_overload" label="Query_overload">
<CodeBlock language="csharp">
{`// Define the suggestion request
var suggestionRequest = new SuggestionWithTerm("ProductName")
{
    // Looking for terms from index-field 'ProductName' that are similar to 'chokolade'  
    Term = "chokolade",
    // Customize options
    Options = new SuggestionOptions 
    {
        Accuracy = 0.3f,
        PageSize = 5,
        Distance = StringDistanceTypes.NGram,
        SortMode = SuggestionSortMode.Popularity
    },
    // Customize display name
    DisplayField = "SomeCustomName"
};

// Query the index for suggestions 
Dictionary<string, SuggestionResult> suggestions = session
    .Query<Products_ByName.IndexEntry, Products_ByName>()
    // Call 'SuggestUsing' - pass the suggestion request
    .SuggestUsing(suggestionRequest)
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Query the index for suggested terms - customize options and display name:
// =========================================================================

Dictionary<string, SuggestionResult> suggestions = session.Advanced
     // Query the index   
    .DocumentQuery<Products_ByName.IndexEntry, Products_ByName>()
     // Call 'SuggestUsing'
    .SuggestUsing(builder => builder
        .ByField(x => x.ProductName, "chokolade")
         // Customize suggestions options
        .WithOptions(new SuggestionOptions
        {
            Accuracy = 0.3f,
            PageSize = 5,
            Distance = StringDistanceTypes.NGram,
            SortMode = SuggestionSortMode.Popularity
        })
         // Customize display name for results
        .WithDisplayName("SomeCustomName"))
    .Execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for suggested terms - customize options and display name
from index "Products/ByName"
select suggest(
    ProductName,
    "chokolade",
    '{ "Accuracy" : 0.3, "PageSize" : 5, "Distance" : "NGram", "SortMode" : "Popularity" }'
) as "SomeCustomName"
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_22" label="suggestions_22">
<CodeBlock language="csharp">
{`// The resulting suggested terms:
// ==============================

Console.WriteLine("Suggested terms:");
// Results are available under the custom name entry
foreach (string suggestedTerm in suggestions["SomeCustomName"].Suggestions)
\{
    Console.WriteLine("\\t\{0\}", suggestedTerm);
\}

// Suggested terms:
//     chocolade
//     schokolade
//     chocolate
//     chowder
//     marmalade
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Prior to this article, please refer to [Query for Suggestions](../../client-api/session/querying/how-to-work-with-suggestions.mdx)  
  for general knowledge about Suggestions, and for dynamic-queries examples.

* In addition to getting suggested terms when making a dynamic-query,  
  you can query for similar terms when querying an index.

* This article provides examples of querying an index for suggestions.  
  Find the Suggestions API methods listed [here](../../client-api/session/querying/how-to-work-with-suggestions.mdx#syntax).

* In this page:

    * [Configure the index for suggestions](../../indexes/querying/suggestions.mdx#configure-the-index-for-suggestions)
    * [The index terms](../../indexes/querying/suggestions.mdx#the-index-terms)
    * [Suggest terms - for single term](../../indexes/querying/suggestions.mdx#suggest-terms---for-single-term)
    * [Suggest terms - for multiple terms](../..//indexes/querying/suggestions.mdx#suggest-terms---for-multiple-terms)
    * [Suggest terms - for multiple fields](../..//indexes/querying/suggestions.mdx#suggest-terms---for-multiple-fields)
    * [Suggest terms - customize options and display name](../..//indexes/querying/suggestions.mdx#suggest-terms---customize-options-and-display-name)

</Admonition>
## Configure the index for suggestions

* In order to be able to ask for suggested terms when querying an index field,  
  that field must first be configured for suggestions in the __index definition__.

* See the following sample index:  
  (This index will be used in the examples ahead).

<TabItem value="suggestions_index_1" label="suggestions_index_1">
<CodeBlock language="js">
{`class Products_ByName extends AbstractJavaScriptIndexCreationTask \{
    constructor() \{
        super();
        
        this.map("Products", p => \{
            return \{
                ProductName: p.Name
            \};
        \});

        // Configure index-field 'ProductName' for suggestions
        this.suggestion("ProductName");

        // Optionally: set 'Search' on this field
        // This will split the field content into multiple terms allowing for a full-text search
        this.index("ProductName", "Search");
    \}
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">

__Increased indexing time__:

* When configuring an index for suggestions, then during the indexing process,  
  in addition to the regular breakdown of the data into terms (tokenization),  
  RavenDB will scramble the terms to simulate common errors.

* This can impact indexing speed but the cost of querying suggestions is Not impacted.

</Admonition>



## The index terms

Based on the __Northwind sample data__,  
these are the terms generated for the above index `Products/ByName`:

![Figure 1. Index terms](./assets/index-terms.png)

1. __The index-field name__ - as defined in the index definition.   
   In this example the field name is `ProductName`.

2. __The terms__ that were generated for this index-field from the documents in the Products collection.
    * The image shows a partial view out of the 163 terms in this list.
    * The terms were generated by RavenDB's [default search analyzer](../../indexes/using-analyzers.mdx#ravendb) since full-text search was set on this field.



## Suggest terms - for single term

Based on the __Northwind sample data__,  
the following query on the index `Products/ByName` from above has no resulting documents,  
since the term `chokolade` does Not exist in the index terms for index-field `ProductName`.

<TabItem value="suggestions_2" label="suggestions_2">
<CodeBlock language="js">
{`// This query on index 'Products/ByName' has NO resulting documents
const products = await session
    .query(\{ indexName: "Products/ByName" \})
    .search("ProductName", "chokolade")
    .all();
`}
</CodeBlock>
</TabItem>

If you suspect that the term `chokolate` in the query criteria is written incorrectly,  
you can ask RavenDB to suggest similar terms from the index, as follows:

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Query the index for suggested terms for single term:
// ====================================================

const suggestions = await session
     // Query the index   
    .query({ indexName: "Products/ByName" })
     // Call 'suggestUsing'
    .suggestUsing(x => x
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' 
        .byField("ProductName", "chokolade"))
    .execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for terms from index-field 'ProductName' that are similar to 'chokolade'
from index "Products/ByName"
select suggest(ProductName, "chokolade")
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_4" label="suggestions_4">
<CodeBlock language="js">
{`// The resulting suggested terms:
// ==============================

console.log("Suggested terms in index-field 'ProductName' that are similar to 'chokolade':");
suggestions["ProductName"].suggestions.forEach(suggestedTerm => \{
    console.log("\\t" + suggestedTerm);
\});

// Suggested terms in index-field 'ProductName' that are similar to 'chokolade':
//     schokolade
//     chocolade
//     chocolate
`}
</CodeBlock>
</TabItem>



## Suggest terms - for multiple terms

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Query the index for suggested terms for multiple terms:
// =======================================================

const suggestions = await session
     // Query the index   
    .query({ indexName: "Products/ByName" })
     // Call 'suggestUsing'
    .suggestUsing(x => x
         // Request to get terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop'
        .byField("ProductName", ["chokolade", "syrop"]))
    .execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for terms from index-field 'ProductName' that are similar to 'chokolade' OR 'syrop'
from index "Products/ByName" select suggest(ProductName, $p0)
{ "p0" : ["chokolade", "syrop"] }
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_6" label="suggestions_6">
<CodeBlock language="js">
{`// The resulting suggested terms:
// ==============================

// Suggested terms in index-field 'ProductName' that are similar to 'chokolade' OR to 'syrop':
//     schokolade
//     chocolade
//     chocolate
//     sirop
//     syrup
`}
</CodeBlock>
</TabItem>



## Suggest terms - for multiple fields

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Query the index for suggested terms in multiple fields:
// =======================================================

const suggestions = await session
     // Query the index   
    .query({ indexName: "Companies/ByNameAndByContactName" })
     // Call 'suggestUsing' to get suggestions for terms that are 
     // similar to 'chese' in first index-field (e.g. 'CompanyName') 
    .suggestUsing(x => x.byField("CompanyName", "chese"))
     // Call 'andSuggestUsing' to get suggestions for terms that are 
     // similar to 'frank' in an additional index-field (e.g. 'ContactName')
    .andSuggestUsing(x => x.byField("ContactName", "frank"))
    .execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="The_index" label="The_index">
<CodeBlock language="js">
{`class Companies_ByNameAndByContactName extends AbstractJavaScriptIndexCreationTask {
    constructor() {
        super();

        this.map("Companies", p => {
            return {
                CompanyName: p.Name,
                ContactName: p.Contact.Name
            };
        });

        // Configure the index-fields for suggestions
        this.suggestion("CompanyName");
        this.suggestion("ContactName");

        // Optionally: set 'Search' on the index-fields
        // This will split the fields' content into multiple terms allowing for a full-text search
        this.index("CompanyName", "Search");
        this.index("ContactName", "Search");
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for suggested terms
// from index-field 'CompanyName' AND from index-field 'ContactName'
from index "Companies/ByNameAndByContactName"
select suggest(CompanyName, "chese"), suggest(ContactName, "frank")
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_8" label="suggestions_8">
<CodeBlock language="js">
{`// The resulting suggested terms:
// ==============================

// Suggested terms in index-field 'CompanyName' that is similar to 'chese':
//     cheese
//     chinese

// Suggested terms in index-field 'ContactName' that are similar to 'frank':
//     fran
//     franken
`}
</CodeBlock>
</TabItem>



## Suggest terms - customize options and display name

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Query the index for suggested terms - customize options and display name:
// =========================================================================

const suggestions = await session
     // Query the index   
    .query({ indexName: "Products/ByName" })
     // Call 'suggestUsing'
    .suggestUsing(x => x
        .byField("ProductName", "chokolade")
         // Customize suggestions options
        .withOptions({
            accuracy: 0.3,
            pageSize: 5,
            distance: "NGram",
            sortMode: "Popularity"
        })
        // Customize display name for results
        .withDisplayName("SomeCustomName"))
    .execute();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`// Query for suggested terms - customize options and display name
from index "Products/ByName"
select suggest(
    ProductName,
    "chokolade",
    '{ "Accuracy" : 0.3, "PageSize" : 5, "Distance" : "NGram", "SortMode" : "Popularity" }'
) as "SomeCustomName"
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="suggestions_10" label="suggestions_10">
<CodeBlock language="js">
{`// The resulting suggested terms:
// ==============================

console.log("Suggested terms:");
// Results are available under the custom name entry
suggestions["SomeCustomName"].suggestions.forEach(suggestedTerm => \{
    console.log("\\t" + suggestedTerm);
\});

// Suggested terms:
//     chocolade
//     schokolade
//     chocolate
//     chowder
//     marmalade
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Client API
- [Query for Suggestions](../../client-api/session/querying/how-to-work-with-suggestions)


-->